prusti-tests/tests/parse/ui/simple_exists.stderr
error: expected one of: `for`, parentheses, `fn`, `unsafe`, `extern`, identifier, `::`, `<`, square brackets, `*`, `&`, `!`, `impl`, `_`, lifetime
 --> $DIR/simple_exists.rs:9:23
  |
9 | #[requires(exists(|x: 32, y: usize| x > 0 ==> x > -1, triggers=[]))]
  |                       ^^

error: expected parenthesized expression after quantifier
  --> $DIR/simple_exists.rs:12:12
   |
12 | #[requires(exists)]
   |            ^^^^^^

error: aborting due to 2 previous errors

